--- a/bluestyle.css
+++ b/bluestyle.css
@@ -10,3 +10,7 @@ body {
         color: yellow;
         text-align: "center";
     }
+    .cau3{
+        color:red;
+        text-align: "center";
+    }
