Huy merge cai skeleton vao master

--- a/bluestyle.css
+++ b/bluestyle.css
@@ -6,4 +6,12 @@ body {
     color: navy;
     margin-left: 20px;
     }
+    .cau2{
+        color: yellow;
+        text-align: "center";
+    }
+    .cau3{
+        color:red;
+        text-align: "center";
+    }
 
