--- a/bluestyle.css
+++ b/bluestyle.css
@@ -11,7 +11,7 @@ body {
         text-align: "center";
     }
     .cau3{
-        color:red;
+        color:white;
         text-align: "center";
-        text-size-adjust: "upcase";
+        background-color: blue;
     }
